redid stl with rsta function, more plots on precip

--- a/thesis/1b-EDA-precip.Rmd
+++ b/thesis/1b-EDA-precip.Rmd
@@ -2,8 +2,8 @@
 
 In this section we want study the time series of precipitation in the
 Central Amazon Basin.
-
-We use the location that is also used in @ciemer2020early.
+The CHIRPS data set contains the **precipitation data**, created from in-situ and satellite measurements (@funk2015climate). It can be downloaded for example from here [https://www.chc.ucsb.edu/data/chirps].
+It contains observations **from 1981 to 2021**. Data comes on a **high resolution of 0.05 grid**.
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(echo=FALSE, warning = FALSE, message = FALSE)
@@ -74,6 +74,17 @@ ggplot(data = world) +
 precip <- brick("../data/interim/drought/chirps_setreftime.nc")
 precip <- raster::aggregate(precip, fact = 10)
 ```
+## Precipitation values raw
+
+Firstly we inspect the precipitation values in general
+```{r}
+precip_dens_plot <- readRDS("../results/precip_dens.rds")
+r <- range(precip_dens_plot$data$value)
+precip_dens_plot
+```
+Its form is a unimodal, right-skewed distribution.
+The values range from `r[1]` tom `r[2]`.
+
 
 ## Mean at each location
 ```{r, fig.cap="Precipitation mean at each location. The mean was computed over the whole time period"}
@@ -157,7 +168,7 @@ Plot means and sd for each month respectively
 create_ind_mat <- function(precip_data) {
   ind_mat <- matrix(NA, nrow = 12, ncol = nlayers(precip_data)/12)
   for(i in 1:12) {
-    ind_mat[i,] <- seq(i, ncol(ind_mat), 12)
+    ind_mat[i,] <- seq(i, nlayers(precip_data), 12)
   }
   return(ind_mat)
 }
@@ -166,11 +177,13 @@ mon_plots <- function(precip_data) {
   ind_mat <- create_ind_mat(precip_data)
   plot_list_m <- list()
   plot_list_sd <- list()
+  plot_list_trend <- list()
   pvals <- getValues(precip_data)
   for(i in 1:nrow(ind_mat)) {
     mon <- subset(precip_data, ind_mat[i,])
     mon_means <- calc(mon, mean)
     mon_sd <- calc(mon, sd)
+    mon_trend <- calc(mon, get_trend)
     m_plot <- plot_summary(mon_means) + #ggtitle(paste("Means for month", i)) +
       theme(#axis.text.x=element_blank(), #remove x axis labels
         #axis.ticks.x=element_blank(), #remove x axis ticks
@@ -179,11 +192,31 @@ mon_plots <- function(precip_data) {
         axis.title.x = element_blank(),
         axis.title.y = element_blank()
         )
-    sd_plot <- plot_summary(mon_sd)  + ggtitle(paste("SD for month", i))
+    sd_plot <- plot_summary(mon_sd)  + ggtitle(paste("SD for month", i)) +
+      #ggtitle(paste("Means for month", i)) +
+      theme(#axis.text.x=element_blank(), #remove x axis labels
+        #axis.ticks.x=element_blank(), #remove x axis ticks
+        #axis.text.y=element_blank(),  #remove y axis labels
+        #axis.ticks.y=element_blank(), #remove y axis ticks
+        axis.title.x = element_blank(),
+        axis.title.y = element_blank(),
+        plot.title = element_text(size=5)
+        )
+    trend_plot <- plot_summary(mon_trend) + #ggtitle(paste("trend for month", i)) +
+      #ggtitle(paste("Means for month", i)) +
+      theme(#axis.text.x=element_blank(), #remove x axis labels
+        #axis.ticks.x=element_blank(), #remove x axis ticks
+        #axis.text.y=element_blank(),  #remove y axis labels
+        #axis.ticks.y=element_blank(), #remove y axis ticks
+        axis.title.x = element_blank(),
+        axis.title.y = element_blank(),
+        plot.title = element_text(size=5)
+        )
     plot_list_m[[i]] <- m_plot
     plot_list_sd[[i]] <- sd_plot
+    plot_list_trend[[i]] <- trend_plot
   }
-  return(list(plot_list_m,plot_list_sd))
+  return(list(plot_list_m,plot_list_sd, plot_list_trend))
 }
 ```
 
@@ -192,91 +225,92 @@ mon_plots <- function(precip_data) {
 plt_list <- mon_plots(precip)
 mon_mean <- plt_list[[1]]
 mon_sd <- plt_list[[2]]
+mon_trend <- plt_list[[3]]
 ```
 
 
-## Means per month
+<!-- ## Means per month -->
+<!-- ### January -->
+
+<!-- ```{r} -->
+<!-- mon_mean[[1]] -->
+<!-- ``` -->
+
+<!-- ### February -->
+
+<!-- ```{r} -->
+<!-- mon_mean[[2]] -->
+<!-- ``` -->
+
+<!-- ### March -->
+
+<!-- ```{r} -->
+<!-- mon_mean[[3]] -->
+<!-- ``` -->
+
+<!-- ### April -->
+
+<!-- ```{r} -->
+<!-- mon_mean[[4]] -->
+<!-- ``` -->
+
+<!-- ### May -->
+
+<!-- ```{r} -->
+<!-- mon_mean[[5]] -->
+<!-- ``` -->
+
+<!-- ### June -->
+
+<!-- ```{r} -->
+<!-- mon_mean[[6]] -->
+<!-- ``` -->
 
 
-### January
+<!-- ### July -->
 
-```{r}
-mon_mean[[1]]
-```
+<!-- ```{r} -->
+<!-- mon_mean[[7]] -->
+<!-- ``` -->
 
-### February
+<!-- ### August -->
 
-```{r}
-mon_mean[[2]]
-```
+<!-- ```{r} -->
+<!-- mon_mean[[8]] -->
+<!-- ``` -->
 
-### March
+<!-- ### September -->
 
-```{r}
-mon_mean[[3]]
-```
+<!-- ```{r} -->
+<!-- mon_mean[[9]] -->
+<!-- ``` -->
 
-### April
+<!-- ### October -->
 
-```{r}
-mon_mean[[4]]
-```
+<!-- ```{r} -->
+<!-- mon_mean[[10]] -->
+<!-- ``` -->
 
-### May
+<!-- ### November -->
 
-```{r}
-mon_mean[[5]]
-```
+<!-- ```{r} -->
+<!-- mon_mean[[11]] -->
+<!-- ``` -->
 
-### June
+<!-- ### December -->
 
-```{r}
-mon_mean[[6]]
-```
+<!-- ```{r} -->
+<!-- mon_mean[[12]] -->
+<!-- ``` -->
 
 
-### July
+<!-- ### {-} -->
 
-```{r}
-mon_mean[[7]]
-```
+<!-- We see spatial patterns of the mean evolving over time. -->
+<!-- For example: From May until August there is a spatial separation in -->
+<!-- two parts that dissolves in september. -->
+<!-- As expected there is a large seasonal component regarding the means. -->
 
-### August
-
-```{r}
-mon_mean[[8]]
-```
-
-### September
-
-```{r}
-mon_mean[[9]]
-```
-
-### October
-
-```{r}
-mon_mean[[10]]
-```
-
-### November
-
-```{r}
-mon_mean[[11]]
-```
-
-### December
-
-```{r}
-mon_mean[[12]]
-```
-
-### {-}
-
-We see spatial patterns of the mean evolving over time.
-For example: From May until August there is a spatial separation in 
-two parts that dissolves in september.
-As expected there is a large seasonal component regarding the means.
 
 ## Means per month TEST
 
@@ -284,86 +318,90 @@ As expected there is a large seasonal component regarding the means.
 mean_arrange <- ggarrange(plotlist = mon_mean, ncol = 3, nrow = 4, common.legend = TRUE, legend = "bottom")
 mean_arrange 
 ```
+We see spatial patterns of the mean evolving over time.
+For example: From May until August there is a spatial separation in
+two parts that dissolves in september.
+As expected there is a large seasonal component regarding the means.
 
-## SD per month
+<!-- ## SD per month -->
 
-### January
+<!-- ### January -->
 
-```{r}
-mon_sd[[1]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[1]] -->
+<!-- ``` -->
 
-### February
+<!-- ### February -->
 
-```{r}
-mon_sd[[2]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[2]] -->
+<!-- ``` -->
 
-### March
+<!-- ### March -->
 
-```{r}
-mon_sd[[3]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[3]] -->
+<!-- ``` -->
 
-### April
+<!-- ### April -->
 
-```{r}
-mon_sd[[4]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[4]] -->
+<!-- ``` -->
 
-### May
+<!-- ### May -->
 
-```{r}
-mon_sd[[5]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[5]] -->
+<!-- ``` -->
 
-### June
+<!-- ### June -->
 
-```{r}
-mon_sd[[6]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[6]] -->
+<!-- ``` -->
 
 
-### July
+<!-- ### July -->
 
-```{r}
-mon_sd[[7]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[7]] -->
+<!-- ``` -->
 
-### August
+<!-- ### August -->
 
-```{r}
-mon_sd[[8]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[8]] -->
+<!-- ``` -->
 
-### September
+<!-- ### September -->
 
-```{r}
-mon_sd[[9]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[9]] -->
+<!-- ``` -->
 
-### October
+<!-- ### October -->
 
-```{r}
-mon_sd[[10]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[10]] -->
+<!-- ``` -->
 
-### November
+<!-- ### November -->
 
-```{r}
-mon_sd[[11]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[11]] -->
+<!-- ``` -->
 
-### December
+<!-- ### December -->
 
-```{r}
-mon_sd[[12]]
-```
+<!-- ```{r} -->
+<!-- mon_sd[[12]] -->
+<!-- ``` -->
 
-### {-}
+<!-- ### {-} -->
 
-For the standard deviation we see as well large differences in values 
-during different months of the year.
+<!-- For the standard deviation we see as well large differences in values  -->
+<!-- during different months of the year. -->
 
 ```{r, include = FALSE}
 #Do we get stationary time series when we only take each january or february?
@@ -373,11 +411,22 @@ during different months of the year.
 ```
 
 
+
 ## SD per month TEST
 
 ```{r}
 sd_arrange <- ggarrange(plotlist = mon_sd, ncol = 3, nrow = 4, common.legend = TRUE, legend = "bottom")
 sd_arrange
+```
+
+For the standard deviation we see as well large differences in values 
+during different months of the year.
+
+## Trend per month TEST
+
+```{r}
+trend_arrange <- ggarrange(plotlist = mon_trend, ncol = 3, nrow = 4, common.legend = TRUE, legend = "bottom")
+trend_arrange 
 ```
 
 
