--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -81,3 +81,25 @@ urldate = {20-04-21}
   year={2001},
   publisher={Wiley Online Library}
 }
+
+@article{funk2015climate,
+  title={The climate hazards infrared precipitation with stations-a new environmental record for monitoring extremes},
+  author={Funk, Chris and Peterson, Pete and Landsfeld, Martin and Pedreros, Diego and Verdin, James and Shukla, Shraddhanand and Husak, Gregory and Rowland, James and Harrison, Laura and Hoell, Andrew and others},
+  journal={Scientific data},
+  volume={2},
+  number={1},
+  pages={1--21},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{huang2017noaa,
+  title={NOAA extended reconstructed sea surface temperature (ERSST), version 5},
+  author={Huang, Boyin and Thorne, Peter W and Banzon, Viva F and Boyer, Tim and Chepurin, Gennady and Lawrimore, Jay H and Menne, Matthew J and Smith, Thomas M and Vose, Russell S and Zhang, Huai-Min and others},
+  journal={NOAA National Centers for Environmental Information},
+  volume={30},
+  pages={8179--8205},
+  year={2017}
+}
+
+
